# scatterbrain

./: .flake8  .gitignore  .python-version  Makefile  README.md  pyproject.toml
src/: mpi-starter-2.py  mpi-starter.py  mpi_ptp.py  run_backdrop_mpi.py  utils.py
src/scatterbrain/: __init__.py  backdrop.py  cupy_numpy_imports.py  designmatrix.py  run.py  run_backdrop.py  run_backdrop_mpi.py  test.py  utils.py
tests/: test_scatterbrain.py
