[tool.poetry]
name = "scatterbrain"
version = "0.1.0"
description = ""
authors = ["Christina Hedges <christina.l.hedges@nasa.gov>"]

[tool.poetry.dependencies]
python = ">=3.7,<3.10"
numpy = "^1.21.2"
matplotlib = "^3.4.3"
fitsio = "^1.1.5"
tqdm = "^4.62.3"
scipy = "^1.7.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mpi4py = "^3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
